Fix carousel: broken animations, layout jump & container sizing
- Replace invalid exit animation string with percentage-based slides
- Add position: absolute to images so enter/exit overlap properly
- Replace broken calc() height with aspect-ratio: 981/652
- Add overflow: hidden to prevent offscreen slide visibility
- Add object-fit: cover for proper image scaling

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -92,7 +92,9 @@ h2 {
   display: inline-block;
   min-width: 73px;
   height: 28px;
-  font: bold 16px/28px Arial, Sans-serif;
+  font:
+    bold 16px/28px Arial,
+    Sans-serif;
   text-shadow: 1px 1px #666;
   padding: 0 33px 0 18px;
   -webkit-border-radius: 3px;
@@ -231,22 +233,12 @@ h2 {
 }
 
 .slideshow-container {
-  /* width: 100%; */
   width: 100%;
-  /* height: 40vh; */
-  height: calc(981 / 652 * 100%);
-  /* height: calc(327 / 217 * height); */
-
+  aspect-ratio: 981 / 652;
   position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  /* margin-top: 100px; */
-  /* margin-bottom: calc(100px- auto); */
+  overflow: hidden;
 }
-.slideshow-container img {
-  /* height: 100%; */
-}
+
 .next,
 .prev {
   top: calc(50% - 20px);
@@ -275,9 +267,12 @@ h2 {
 }
 
 .slideshow-image {
-  /* position: absolute; */
-  max-width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .refresh {
